# moaa-prime

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_CYCLE2.md  ARCHITECTURE_CYCLE3.md  CHANGELOG.md  CONTRACTS.md  DEMO_README.md  FILEMAP.md  MASTER_HANDOFF.md  PRODUCTION_READINESS.md  README.md  ROADMAP.md  RUNBOOK_PRODUCTION.md  pyproject.toml
.codex/: config.toml  done_criteria.blindbench.json  done_criteria.json  done_criteria.longevals.json  done_criteria.production.json  done_criteria.toughbench.json
datasets/: benchmark_holdout_locked.jsonl  benchmark_redteam.jsonl  benchmark_shadow_prod.jsonl  benchmark_train.jsonl  external_benchmarks.jsonl  tough_benchmarks.jsonl
demos/: demo_cases.json
reports/: eval_report.json
scripts/: audit_data_leakage.py  bench_run.py  check_done.py  dashboard.py  demo_run.py  eval_blind_holdout.py  eval_calibration.py  eval_compare.py  eval_dual_gate.py  eval_external_bench.py  eval_matrix.py  eval_redteam.py  eval_router.py  eval_run.py  eval_shadow_prod.py  eval_stability.py  eval_tool_first.py  eval_tough_bench.py  install_watchdog_cron.sh  load_smoke.py  preflight_prod.py  render_report.py  run_swarm_cycle.sh  swarm_autopilot.sh  train_router.py  tune_production.py  watchdog_cycle.sh
tests/: test_cli_module_entrypoint.py  test_cycle2_gcel_v2.py  test_cycle2_oracle_v2.py  test_cycle2_router_v2.py  test_cycle2_swarm_v2.py  test_cycle3_pareto.py  test_cycle3_router_training.py  test_cycle3_router_v3.py  test_cycle3_trace_recorder.py  test_imports.py  test_phase10_dual_brain.py  test_phase11_gcel.py  test_phase12_eval_smoke.py  (+42 more)
(+92 files in other folders)
